--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,19 @@
-
 [build-system]
-requires = ["setuptools", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "plotverse"
-version = "0.0.8"
+version = "0.0.9"
 description = "Data visualization library built with Pandas, Matplotlib, and Seaborn"
 authors = [
-  { name="sanju", email="sanjayskpy1@gmail.com" }
+  { name = "sanju", email = "sanjayskpy1@gmail.com" }
 ]
 readme = "README.md"
 license = { text = "MIT" }
-dependencies = []
 requires-python = ">=3.7"
+dependencies = [
+  "pandas==2.2.2",
+  "matplotlib==3.8.4",
+  "seaborn==0.13.2"
+]
